--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ data_personal
 data/species_records.RDS
 data/species_records_*.RDS
 newsletter_templates/rosm.cache
+newsletter_templates/intermediates
 
 
 
